2-multiple-pods.yml
#kubernetes.io
#documentation, reference-kubernetes API - workload-resources

apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/nginx

    - name: mongo
      image: docker.io/mongo
