3-replicaset.yml
#below pod wont get created, above replicaset is created with name and below pod is created with same name hence
#always maintain unique label
apiVersion: v1
kind: Pod
metadata:
  name: rs-01-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
