9-secretmgmt.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret09-01
spec:
  containers:
    - name: debug
      image: docker.io/rkalluru/debug
