12-network-policy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    project: demo

---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    project: demo
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    appType: API
  ports: # if we dont specify it will open random port
    - protocol: TCP
      port: 80
      targetPort: 80
#curl backend.backend.svc.cluster.local
# backend : servicename
# backend: namespace


---
# traffic is allowed, if any pod is matching with UI
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-only-frontend
  namespace: backend
spec:
  podSelector:
    matchLabels:
      appType: API
  policyTypes:
    - Ingress
    - Egress
  ingress: # below is allowing only 80 port from UI pod followed namespace label
    - from:
        - namespaceSelector:
            matchLabels:
              project: demo
        - podSelector:
            matchLabels:
              appType: UI
      ports:
        - protocol: TCP
          port: 80
  egress:
    - {} # allowing everything
